influx-minimal/templates/chronograf-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chronograf
  namespace: influx
  labels:
    app: chronograf
spec:
  ports:
  - name: http
    port: 8888
    targetPort: http
  selector:
    app: chronograf
