influx-minimal/templates/influxdb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: influxdb
  namespace: influx
  labels:
    app: influxdb
spec:
  ports:
  - name: http
    port: 8086
    targetPort: http
  selector:
    app: influxdb
